--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
         .hide-geotabs {
             display: none;
         }
+
+        .geo-tab-disabled {
+            pointer-events: none;
+            opacity: 0.7;
+        }
     </style>
 
     <!--
