updates for sdg metadata

--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,19 @@
             display: none;
         }
 
-        .geo-tab-disabled {
+        .geo-tab-disabled,
+        .sdg-tab-disabled {
             pointer-events: none;
             opacity: 0.7;
+        }
+
+        .rdoSeries {
+            max-height: 200px;
+            overflow: scroll;
+        }
+
+        .rdoSeries>label {
+            margin-bottom: 0px;
         }
     </style>
 
